kubernetes/ide-deployment/user-spawner/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: funasa-ide-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/auth-type: cognito
    alb.ingress.kubernetes.io/auth-idp-cognito: '{"userPoolARN":"arn:aws:cognito-idp:us-east-1:248189947068:userpool/us-east-1_KsQSqvc9B","userPoolClientID":"5lvif42ss8170fh2s24bs9fj5c","userPoolDomain":"iesb-ide-default"}'
    alb.ingress.kubernetes.io/auth-on-unauthenticated-request: authenticate
    alb.ingress.kubernetes.io/auth-scope: openid email
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:248189947068:certificate/6d8e0740-fa40-4171-aff9-7cd815b6e2e8
spec:
  rules:
  - host: ide.dataiesb.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ads-service
            port:
              number: 80
